--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
-# KiaiMC, (c) Shadow 2022
+# KiaiMC, (c) Shadow 2024
 
+# See https://docs.kiai.app/features/api for more information on how to get this
 token: ""
 
 # Debug mode
