--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,4 @@ author: thewilloftheshadow
 depend: [DiscordSRV]
 load: POSTWORLD
 website: "https://github.com/buape/KiaiMC"
-description: Synchronize your in-game messages with Kiai's XP
+description: Synchronize your in-game messages and playtime with Kiai's XP
