--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: KiaiMC
-version: ${project.version}
+version: ${version}
 main: com.buape.kiaimc.KiaiMC
 api-version: 1.20
 author: thewilloftheshadow
