--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: KiaiMC
-version: ${project.version}
+version: ${version}
 main: com.buape.kiaimc.KiaiMC
 api-version: 1.20
 author: thewilloftheshadow
 depend: [DiscordSRV]
 load: POSTWORLD
 website: "https://github.com/buape/KiaiMC"
-description: Synchronize your in-game messages with Kiai's XP
+description: Synchronize your in-game messages and playtime with Kiai's XP
