--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-# KiaiMC, (c) Shadow 2024
+# KiaiMC, (c) 2025 Buape Studios
 
 # See https://docs.kiai.app/features/api for more information on how to get this
 token: ""
