--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: KiaiMC
 version: ${version}
 main: com.buape.kiaimc.KiaiMC
-api: 1.21.8
+api-version: 1.21.8
 author: thewilloftheshadow
 depend: [DiscordSRV]
 load: POSTWORLD
